[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = chaostoolkit-lib
url = https://chaostoolkit.org
project_urls =
    Docs: RTD = https://docs.chaostoolkit.org
    CI: GitHub = https://github.com/chaostoolkit/chaostoolkit-lib/actions
    GitHub: issues = https://github.com/chaostoolkit/chaostoolkit-lib/issues
    GitHub: repo = https://github.com/chaostoolkit/chaostoolkit-lib
description = Chaos Toolkit core library
long_description = file: README.md
long_description_content_type = text/markdown
author = Chaos Toolkit
author_email = contact@chaostoolkit.org
zip_safe = False
license_file = LICENSE
platforms = any
license = Apache License Version 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython

[options]
use_scm_version = True
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
    pytest_runner
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
install_requires =
    logzero~=1.5
    requests~=2.21
    pyyaml~=5.4
    contextvars;python_version<"3.7"
    importlib-metadata~=1.2; python_version < '3.8'
    importlib-metadata~=4.4; python_version > '3.9'
tests_require = 
    requests-mock
    coverage
    pytest~=6.2; python_version >= '3.6'
    pytest-cov
    pytest-sugar
    ply
    pyhcl
    hvac
    jsonpath2
    chardet


[options.extras_require]
vault = hvac>=0.7.2
jsonpath = jsonpath2>=0.2.1
decoders = cchardet>=2.1.4; chardet>=3.0.4

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
    --cov chaoslib
    --cov-report term-missing:skip-covered
    --cov-report xml
    -p no:warnings
